Completed Never Stop and Stick Jab Twist

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -683,14 +683,14 @@
                         <hr>                                            
                         <span class="green">QUEST RECEIVED:</span><span class="red"> The Art of Combat</span><span class="orange">, Bograhk Dargarkh of Krog invited you to seek out and train with 6 Orc Combat Trainers.</span>
                         <br>
-
+                        When you have completed all the combat trainers task speak to <span class="light-red">Bograhk Dargarkh</span> He will reward you with the Orcish Warrior Plate. 
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Plate</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">35,640</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
-                        You received training in the art of Sword combat from Orzgath Mugzluk.  
+                        Bograhk rewarded your hard work with Orcish Warrior Plate armor!  
                     </p>
                         
                   </div>
@@ -829,7 +829,7 @@
                         If you kill one with out the Crude Orcish Battle Axe you will be updated with a warning, <span class="red">You must equip the Crude Orcish Battle Axe to complete Tyugh's training.</span> Once you have killed 50 you will be updated.
                         <br>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Keep it Sharp</span><span class="orange">, Return to Tyugh Bruurshk in Krog to complete your training.</span>  
-                        Speak to Tyugh Bruurshk he will reward you with the Orcish Warrior .
+                        Speak to Tyugh Bruurshk he will reward you with the Orcish Warrior Gauntlets.
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Gauntlets</span></li>
@@ -1029,7 +1029,7 @@
                           </td>
                           <td>
                             <img class="thumbnail-img" src="Images/BlackSwamp/Never_Stop_Crude_Orcish_Punching_Daggers.png" alt="Crude Orcish Spear" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Never_Stop_Crude_Orcish_Punching_Daggers_Stats.png' alt='Crude Orcish Punching Daggers Stats'>">
-                            <img class="thumbnail-img" src="Images/BlackSwamp/Never_Stop_Orcish_Warrior_Boots.png" alt="Orcish Warrior Cape" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Never_Stop_Orcish_Warrior_Boots_Stats.png' alt='Orcish Warrior Boots Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Never_Stop_Orcish_Warrior_Greaves.png" alt="Orcish Warrior Greaves" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Never_Stop_Orcish_Warrior_Greaves_Stats.png' alt='Orcish Warrior Greaves Stats'>">
 
                           </td>                        
                     </table>
@@ -1052,11 +1052,11 @@
                         If you kill one with out the Crude Orcish Punching Daggers you will be updated with a warning, <span class="red">You must equip the Crude Orcish Punching Daggers to complete Ox's training.</span> Once you have killed 100 you will be updated.
                         <br>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Never Stop</span><span class="orange">, Return to Ox Juurnuhk in Samad to collect your reward.</span>  
-                        Speak to Ox Juurnuhk he will reward you with the Orcish Warrior Boots.
+                        Speak to Ox Juurnuhk he will reward you with the Orcish Warrior Greaves.
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Boots</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Greaves</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">85,800</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
                         You have received training in the art of Unarmed Combat from Juurnuhk.
@@ -1104,7 +1104,7 @@
                           </td>
                           <td>
                             <img class="thumbnail-img" src="Images/BlackSwamp/Stick_Jab_Twist_Crude_Orcish_Dagger.png" alt="Crude Orcish Spear" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stick_Jab_Twist_Crude_Orcish_Dagger_Stats.png' alt='Crude Orcish Dagger Stats'>">
-                            <img class="thumbnail-img" src="Images/BlackSwamp/Stick_Jab_Twist_Orcish_Warrior_Greaves.png" alt="Orcish Warrior Greaves" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stick_Jab_Twist_Orcish_Warrior_Greaves_Stats.png' alt='Orcish Warrior Greaves Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Stick_Jab_Twist_Orcish_Warrior_Boots.png" alt="Orcish Warrior Boots" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Stick_Jab_Twist_Orcish_Warrior_Boots_Stats.png' alt='Orcish Warrior Boots Stats'>">
 
                           </td>                        
                     </table>
@@ -1127,14 +1127,14 @@
                         If you kill one with out the Crude Orcish Dagger you will be updated with a warning, <span class="red">You must equip the Crude Orcish Dagger to complete Gar-Gar's training.</span> Once you have killed 50 you will be updated.
                         <br>
                         <span class="green">QUEST UPDATE:</span><span class="red"> Stick Jab Twist</span><span class="orange">, Return to Gar-Gar Mootarhk in Samad to collect your reward.</span>  
-                        Speak to Gar-Gar Mootarhk he will reward you with the Orcish Warrior Greaves.
+                        Speak to Gar-Gar Mootarhk he will reward you with the Orcish Warrior Boots.
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Greaves</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Orcish Warrior Boots</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">26,400</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr>
-                        You have received training in the art of Small Blades from Mootarhk.
+                        You have received training in the art of Small Blades combat from Mootarhk.
                     </p>
                         
                   </div>
