--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -490,6 +490,82 @@
               </div>
               <!-- End of Leonard is Lost -->
               <div class="line"></div>
+              <!-- Start of Reclaiming What's mine -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="reclaimingWhatsMine" class="anchor text-center">Reclaiming What's Mine</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Searching</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Ivogur
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Reclaiming_Whats_Mine_Gold_1500.png' alt='Gold 1500'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Hard_Leather_Cap.png" alt="Hard Leather Cap" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Reclaiming_Whats_Mine_Hard_Leather_Cap_Stats' alt='Hard Leather Cap'>">  
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Ivogur" alt="Ivogur">
+                        Speak to <span class="light-red">Ivogur</span> He ask you to make sure all his supplies are still there. 5 crates of supplies. His memory is not so good, he can't remember where they are. He will give good reward.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Reclaiming What's mine</span><span class="orange">, The ghost Ivogur who walks the streets of Krog asked you to locate 5 supply crates in his mine.</span>
+                        <br>
+                        His mine is south east of Krog. Follow the path south just before you get to Maraket. Turn east and follow the south side of the mountain and you will come to his mind. See this map of the location <img src="" alt="Ivogur's Mine">
+                        Once in side use this map to locate all the supplies. <img src="" alt="Inside Ivogur's Mine Map"> There are <span class="red">Cave Spiders (lvl )</span>, <span class="red">Cave Slugs (lvl 11)</span>, and <span class="red">Bats (lvl 1)</span> in this cave.
+                        The cave is not to difficult to navigate. It can get dark in some places, but there are a few things that produce light in this cave. Bring a tourch if you think you need one, but you wont really need it. Head north west to supplie crate number 3 first.
+                        When you find it you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE: You have located a Supply Crate for Ivogur.</span>
+                        <br>
+                        Go back to the entrance of the cave and head south west go for crate number 5 next then to number 4. Number 4 has a trap door next to it you will need to enter to beable to get to crates 1 and 2. Once you go down the trap door you can chose to go north for number 2 or go east for number 1.
+                        It won't matter you will have to backtrack to get each one anyway. Once you find them both you will be updated to return to Ivogur in Krog.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Reclaiming What's Mine</span><span class="orange">, Return to Ivogur in Krog.</span>
+                        <br>
+                         <span class="light-red">Ivogur</span> is waiting for news of his supplies. He is greatful for the good news they are still there. Take this gold for reward and more in crate.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 1500</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 200 faction with the city of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">39,600</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        Head south between the moutain and the building closest to the moutain, there will be Ivogur's Crate. Check it and you are rewarded. 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Hard Leather Cap</span></li>
+                        </ul>
+                        <hr>
+                        Your help has allowed Ivogur to enter his rest.
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Leonard is Lost -->
+              <div class="line"></div>
               <!-- Start of Formidable Formicidae -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
