Completed Reclaiming Whats mine Quest.

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -521,19 +521,19 @@
                           </td>
                           <td>
                             <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Reclaiming_Whats_Mine_Gold_1500.png' alt='Gold 1500'>">
-                            <img class="thumbnail-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Hard_Leather_Cap.png" alt="Hard Leather Cap" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Reclaiming_Whats_Mine_Hard_Leather_Cap_Stats' alt='Hard Leather Cap'>">  
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Hard_Leather_Cap.png" alt="Hard Leather Cap" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Reclaiming_Whats_Mine_Hard_Leather_Cap_Stats.png' alt='Hard Leather Cap'>">  
                           </td>                        
                     </table>
 
                     <hr>
                     <p class="clearfix">
-                        <img class="npc-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Ivogur" alt="Ivogur">
+                        <img class="npc-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Ivogur.png" alt="Ivogur">
                         Speak to <span class="light-red">Ivogur</span> He ask you to make sure all his supplies are still there. 5 crates of supplies. His memory is not so good, he can't remember where they are. He will give good reward.
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Reclaiming What's mine</span><span class="orange">, The ghost Ivogur who walks the streets of Krog asked you to locate 5 supply crates in his mine.</span>
                         <br>
-                        His mine is south east of Krog. Follow the path south just before you get to Maraket. Turn east and follow the south side of the mountain and you will come to his mind. See this map of the location <img src="" alt="Ivogur's Mine">
-                        Once in side use this map to locate all the supplies. <img src="" alt="Inside Ivogur's Mine Map"> There are <span class="red">Cave Spiders (lvl )</span>, <span class="red">Cave Slugs (lvl 11)</span>, and <span class="red">Bats (lvl 1)</span> in this cave.
+                        His mine is south east of Krog. Follow the path south just before you get to Maraket. Turn east and follow the south side of the mountain and you will come to his mine. See this map of the location <img class="monster-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Cave_Location_Map.png" alt="Ivogur's Mine Location">
+                        Once in side use this map to locate all the supplies. <img class="npc-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Cave_Map.png" alt="Inside Ivogur's Mine Map"> There are <span class="red">Cave Spiders (lvl )</span>, <span class="red">Cave Slugs (lvl 11)</span>, and <span class="red">Bats (lvl 1)</span> in this cave.
                         The cave is not to difficult to navigate. It can get dark in some places, but there are a few things that produce light in this cave. Bring a tourch if you think you need one, but you wont really need it. Head north west to supplie crate number 3 first.
                         When you find it you will be updated.
                         <br>
@@ -564,7 +564,7 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Leonard is Lost -->
+              <!-- End of Reclaiming What's mine -->
               <div class="line"></div>
               <!-- Start of Formidable Formicidae -->
               <div class="card bg-main half-width mb-5">
