--- a/events.html
+++ b/events.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Ashen Empires Guides">
+    <meta name="keywords" content="Ashen Empires, Quest, Guides, Role Playing, MMORPG">
+    <meta name="author" content="Keith Heffington">
 
     <title>AEGuides | Events</title>
 
