Completed Sting Operation

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -536,7 +536,7 @@
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Reclaiming What's mine</span><span class="orange">, The ghost Ivogur who walks the streets of Krog asked you to locate 5 supply crates in his mine.</span>
                         <br>
                         His mine is south east of Krog. Follow the path south just before you get to Maraket. Turn east and follow the south side of the mountain and you will come to his mine. See this map of the location <img class="monster-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Cave_Location_Map.png" alt="Ivogur's Mine Location">
-                        Once in side use this map to locate all the supplies. <img class="npc-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Cave_Map.png" alt="Inside Ivogur's Mine Map"> There are <span class="red">Cave Spiders (lvl )</span>, <span class="red">Cave Slugs (lvl 11)</span>, and <span class="red">Bats (lvl 1)</span> in this cave.
+                        Once in side use this map to locate all the supplies. <img class="npc-img" src="Images/BlackSwamp/Reclaiming_Whats_Mine_Cave_Map.png" alt="Inside Ivogur's Mine Map"> There are <span class="red">Cave Spiders (lvl 8)</span>, <span class="red">Cave Slugs (lvl 11)</span>, and <span class="red">Bats (lvl 1)</span> in this cave.
                         The cave is not to difficult to navigate. It can get dark in some places, but there are a few things that produce light in this cave. Bring a tourch if you think you need one, but you wont really need it. Head north west to supplie crate number 3 first.
                         When you find it you will be updated.
                         <br>
@@ -634,6 +634,113 @@
                         <hr>  
                     </p>
                         
+                  </div>
+                </div>
+              </div>
+              <!-- End of Formidable Formicidae -->
+              <div class="line"></div>
+              <!-- Start of Sting Operation -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="stingOperation" class="anchor text-center">Sting Operation</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Monster</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Jessicugh
+                          </td>
+                          <td>
+                            Scorpions (lvl 5), Schlag the Scorpioness (lvl 20)
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Sting_Operation_Lamp_of_Isos.png" alt="Lamp of Isos" >
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Sting_Operation_Potion_of_Cure_Greater_Poison.png" alt="Potion of Cure Greater Poison" >
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Sting_Operation_Potion_of_Cure_Greater_Disease.png" alt="Potion of Cure Greater Disease" >
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Sting_Operation_Potion_of_Greater_Healing_30.png" alt="Potion of Greater Healing" >
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Sting_Operation_Potion_Greater_Repair_20.png" alt="Potion of Greater Repair" >
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Sting_Operation_Jessicugh.png" alt="Jessicugh">
+                        Speak to <span class="light-red">Jessicugh</span> she ask you for a favor. She sent a scout name Mutugchugugh to find scorpions. He found entrance to the nest to the north, but not come back. Go find out what happend to Mutugchugugh.  
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Sting Operation</span><span class="orange">, Find Mutugchugugh, who was last seen scouting a scorpion nest to the north of Krog.</span>
+                        <br>
+                        Head out the north gate and stick to the mount side and you will reach the scorpion nest in no time. <img class="monster-img" src="Images/BlackSwamp/Sting_Operation_Nest_Location_Map.png" alt="Nest Location"> Enter the nest, this nest
+                        is not hard to navigate. There are <span class="red">Scorpions</span> and their mother <span class="red">Schlag the Scorpioness</span>. <img class="monster-img" src="Images/BlackSwamp/Sting_Operation_Schlag_Map_Location.png" alt=""> Head south you will come across bones on the ground, examine them and you will find that one of them is Mutugchugugh.
+                        <img class="monster-img" src="Images/BlackSwamp/Sting_Operation_Mutugchugugh_Corpse.png" alt="Mutugchugugh Corpse">
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Sting Operation</span><span class="orange">, You found the corpse of Mutugchugugh, Return to Jessicugh in Krog</span>
+                        <br>
+                        When you return to <span class="light-red">Jessicugh</span> she is disappointed he is dead and that she has no way of gathering scorpion stingers. She then task you to fetch 20 scorpion stingers, so she can make potions. It took to long last time 
+                        here lamp to guide in dark nest.   
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Lamp of Isos</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2,640</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>  
+                    </p>
+                    <p>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Sting Operation</span><span class="orange">, Bring 20 Scorpion Stingers to Jessicugh</span>
+                      <br>
+                      You can find <span class="red">Scorpions</span> <img class="monster-img" src="Images/NPC/Monsters/Scorpion.png" alt="Scorpion"> all around Krog, or go back to the nest and kill them. Once you have collected 20 <span class="light-green">Scorpion Stingers</span> you will be updated.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough </span><span class="green">Scorpion Sting </span><span class="orange">to complete the quest.</span>
+                      <br>
+                      Return to <span class="light-red">Jessicugh</span>. Drag the 20 scorpion Stingers on to her. She rewards you with Potions.
+                      <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Potion of Cure Greater Poison</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Potion of Cure Greater Disease</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">30 Potions of Greater Healing</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2,640</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                      </p>
+                      <p>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Sting Operation</span><span class="orange">, Speak to Jessicugh again.</span>
+                        Speak to <span class="light-red">Jessicugh</span> one more time. She wants to go collect more scorpion stingers on her own, but she needs you to kill the mother of the nest.
+                        <span class="red">Schlag the Scorpioness</span>
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Sting Operation</span><span class="orange">, Kill Schlag the Scorpioness for Jessicugh</span>
+                        <br>
+                        Head back to the nest and look for <span class="red">Schlag the Scorpioness</span> <img class="monster-img" src="Images/NPC/Monsters/Schlag_the_Scorpioness.png" alt="Schlage the Scorpioness"> When you fight her, she will spawn more Scorpions and will poison you. It would be a good
+                        idea to bring your <span class="light-green">Potion of Cure Greater Poison</span> with you just in case. Once you kill her you will be updated.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Sting Operation</span><span class="orange">, You've exterminated Schlag the Scorpioness, Return to Jessicugh in Krog</span>
+                        <span class="light-red">Jessicugh</span> is happy that Schlag is dead. She can now go gather scorpion stingers on her own. She can now become a mighty Orc Alchemist. She gives you repair potions.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">20 Potions of Greater Repair</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 500 faction with the city of Krog!</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">21,780</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        You enabled Jessicugh to perfect her alchemical skills.
+                      </p>      
                   </div>
                 </div>
               </div>
