Completed Tree Trouble

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -818,6 +818,88 @@
               </div>
               <!-- End of Protect Krog! -->
               <div class="line"></div>
+              <!-- Start of Tree Trouble! -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="treeTrouble" class="anchor text-center">Tree Trouble</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Searching</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Alchemist Singaford
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Tree_Trouble_Naturalist_Greaves.png" alt="Naturalist Greaves" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Tree_Trouble_Naturalist_Greaves_Stats.png' alt='Naturalist Greave Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Tree_Trouble_Gold_500.png' alt='Gold 500'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Tree_Trouble_Alchemist_Singaford.png" alt="Alchemist Singaford">
+                        Speak to <span class="light-red">Alchemist Singaford</span>, he is an Alchemist from Jeel. He specializes in plants and plant-borne illnesses. He has been requested to help with a problem. Apparently some of the trees along the path to Maraket have been afflicted with some rare and new disease.
+                        If not dealt with swiftly this could seriously damage the ecology and have a serious effect on the local wildlife. He needs you to travel the path to Maraket, when you find an afflicted tree scrape the trunks and collect a sample from the 3 types of trees. <img style="height: 200px" src="Images/BlackSwamp/Tree_Trouble_Afflicted_Tree.png" alt="Afflicted Tree">                        
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Tree Trouble</span><span class="orange">, Bring 3 samples of afflicted trees found near Krog to Chief Researcher Dnader in Maraket.</span>
+                        <br>
+                        <img class="npc-img" src="Images/BlackSwamp/Tree_Trouble_Afflicted_Tree_Location_Map.png" alt="Tree Locations Map"> Use this map to help you find the three trees. Head out the west side of Krog then south. Just to the west near the Sewer entrance is your fist tree. <img src="Images/BlackSwamp/Tree_Trouble_Afflicted_Cedar_Tree_Tag.png" alt="Afflicted Cedar Tree Tag">
+                        You will be updated you have located an afflicted tree.
+                        <br> 
+                        <span class="green">QUEST UPDATE: You collect a sample from the Afflicted Cedar Tree!</span>
+                        <br>
+                        The next tree is just a little ways to the south east, south of the ants. <img src="Images/BlackSwamp/Tree_Trouble_Afflicted_Peach_Tree_Tag.png" alt="Peach Tree Tag"> Find the afflicated Tree and you will be updated
+                        <br>
+                        <span class="green">QUEST UPDATE: You collect a sample from the Afflicted Peach Tree!</span>
+                        <br> 
+                        The final tree is just off of the path on the west side right before getting to Maraket. <img src="Images/BlackSwamp/Tree_Trouble_Afflicted_Oak_Tree_Tag.png" alt="Oak Tree Tag"> Find the afflicated Tree and you will be updated                    
+                        <br>
+                        <span class="green">QUEST UPDATE: You collect a sample from the Afflicted Oak Tree!</span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Tree Trouble</span><span class="orange">, You have collected all 3 samples! Take thme to Dander in Maraket.</span>
+                        <br>
+                        <img class="npc-img" src="Images/BlackSwamp/Tree_Trouble_Chief_Researcher_Dander.png" alt="Chief Researcher Dander">
+                        Head in to Maraket then to the Magic shop to find <span class="light-red">Chief Researcher Dander</span>. He can now run his experiments. After running the experiments he finds out that there are tiny organisms scattered throughout the samples.
+                        Take the samples to Alchemist Singaford he will handle the rest.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Tree Trouble</span><span class="orange">, Take the Tree Report to Alchemist Singaford in Krog.</span>
+                        <br>
+                        Once you reach Alchemist Singaford he thanks you for the assistance and rewards you for your help.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Naturalist Greaves</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">500 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 200 faction with the city of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">9,900</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You helped researchers understand the disease affecting trees near Krog.  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Tree Trouble -->
+              <div class="line"></div>
               <!-- Start of The Art of Combat -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
