Added Patch Notes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,70 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 3/4/2021</small> <br>
+              <p>
+                <u>System</u>
+                <ul>
+                  <li>Aspect Ratio Lock on Game Window resize (use SHIFT key while dragging the game window)</li>
+                  <li>Auto Targeting (using ~ key) will no longer select followers except followers of hostile mobs</li>
+                  <li>Drop notifications now include name of creature that dropped the item</li>
+                </ul>
+                <u>NPCs</u>
+                <ul>
+                  <li>Fixed issure with creatures that spawn additional mobs (ice golems, deadwillows, etc)</li>
+                  <li>Putrid jelly now using correct Damage Type (Poison)</li>
+                  <li>Werewolf Lords now have chance to turn palyers into werewolf</li>
+                  <li>Mushroom Land Quest on kill King Mack Mack stage now updating when it is killed</li>
+                  <li>Adjusted creature stats on Demon and Hell Guardian to be a bit tougher</li>
+                  <li>Fixed bug with Talazarian Faction Officer Dialogue</li>
+                </ul>
+                <u>Treasure Drops</u>
+                <ul>
+                  <li>Adjusted drop tables and chances on treasure drops in Athro dungeon on all mobs</li>
+                </ul>
+                <u>Map</u>
+                <ul>
+                  <li>Added new high level swamp area >> of Josody, including spawns</li>
+                  <li>Removed house plots in the high level swamp area</li>
+                  <li>Fixed terrain isssue in Athro's jungle temple that let players walk the walls on jungle level</li>
+                  <li>Added music to Jungle Temple</li>
+                  <li>Set new John Doe spawn point for players who don't have spawn set (no longer LSP, at LC now</li>
+                  <li>Upped werewolf cave spawn (WWI cave)</li>
+                  <li>Adjusted Badlands and Hell encounters (more mobs and split up some spawns in Badlands, removed Balron/HG from entrance to hell)</li>
+                  <li>Sand Wurm gate guards now neutral, will not attack evil rep players</li>
+                </ul>
+                <u>Spells</u>
+                <ul>
+                  <li>Doubled spell effect durations that are cast while wearing Robe of Dark Rites (Bulwark Might, Holy Aura, Fortify, Alacrity, Grandeur, Speed of Gazelle, Aegis of Arna, Dark Prayer, Faith, Blessing of Malax, Cerebral Thought, Resplendence)</li>
+                  <li>Modified a few spells to be base 2 hours to match other spells in same casting class (Bulwark Might, Fortify, Holy Aura, Alacrity, Speed of the Gazelle, Blessing of Malax, Dark Prayer were 3600 sec, now 7200)</li>
+                </ul>
+                <u>Weapon/Armor</u>
+                <ul>
+                  <li>New set of armor: Rune Armor. A full set minus cape and jewelry, including a 2-H sword and a mage shield. The sword may only be equipped on Chaos but it is dropping on H/L. Armor is equippable on H/L. You must have the entire set (minus shield) to equip the sword. This is a legacy set on Armor adapted from Dransik.</li>
+                  <li>Adjusted either specials/bonuses/wep speed on various chaos weps: Rune Sword, Symboled Blade of Destruction, Fireseeker, Emerald Stalker, Briarthorn Bow, Hell's Bane, Sword of Dark Storms, Fellstrike, Bow of Venom.</li>
+                  <li>Added another special to Famine Bringer (has two separate specials now; OG removes food effects from player enemies; new one is a disease DOT on PVE/PVP targets)</li>
+                  <li>Updated tooltip on Ethereal Platinum Shield, Battle Armor of Waking, Spectral Robe to reflect correct stat bonuses</li>
+                  <li>Misspelling on Royal Steel Guantlets (Gauntlets)</li>
+                  <li>Added tooltip info to the ammunition to show secondary damage Type</li>
+                  <li>Adjusted special on sword of dark storms, famine bringer, hell cleaver, hell's bane</li>
+                  <li>Adjusted to hit on Talazar's Minion to +40 instead of +50</li>
+                </ul>
+                <u>Chaos Only</u>
+                <ul>
+                  <li>Added other uses for Chaos points (boots of haste, get out of jail)</li>
+                  <li>Added Boots of Haste (can only equip on Chaos)</li>
+                  <li>Fixed portal to Tserith's for Chaos so you can enter mino maze but not Tserith's lair</li>
+                  <li>Blocked off LSP for Chaos</li>
+                </ul>
+                <u>Misc</u>
+                <ul>
+                  <li>Player v Plyaer death message will be broadcast to the server on PVP servers</li>
+                </ul>
+              </p>
+
+            </article> 
+            <div class="body-line"></div> 
+            <article>
               <small class="article-date">FujiQ 2/19/2021</small> <br>
               <p>
                 <u>The Gathering Gloom</u> <br>
@@ -142,6 +206,7 @@
                 <li>Ryonkah's life steal damaged has been adjusted</li>
               </ul>
             </article> 
+            <div class="body-line"></div>            
             <article>
               <small class="article-date">FujiQ 2/10/2021</small> <br>
               <p>
@@ -150,7 +215,8 @@
               <ul>
                 <li>Ryonkah's life steal damaged has been adjusted</li>
               </ul>
-            </article>  
+            </article> 
+            <div class="body-line"></div> 
             <article>
               <small class="article-date">FujiQ 2/09/2021</small> <br>
               <p>
