--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 3/11/2021</small>
+              <p>
+                Live patch - Heroes only
+                <ul>
+                  <li>Scroll of the Demon Horde has been temporarily disabled</li>
+                </ul>
+              </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 3/4/2021</small> <br>
               <p>
                 <u>System</u>
